(lang dune 3.1)

(name backend)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name backend)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
   ocaml 
   dune
   cohttp-lwt-unix 
   cohttp-async
   yojson
   ppx_yojson_conv)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
